<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="de.napalm.geoxmpp_pp.LoginActivity$PlaceholderFragment" >
	<EditText
		android:id="@+id/usernameTxtIn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="30dp"
		android:ems="10"
		android:hint="@string/username"
		android:inputType="textEmailAddress" >
		<requestFocus />
	</EditText>
	<EditText
		android:id="@+id/passwordTxtIn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/usernameTxtIn"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="15dp"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword" />
	<TextView
		android:id="@+id/registerErrorText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="15dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:text="@string/login_header"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	<Button
		android:id="@+id/loginButton"
		android:layout_width="92dp"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/registerBtn"
		android:layout_alignBottom="@+id/registerBtn"
		android:layout_alignRight="@+id/passwordTxtIn"
		android:text="@string/login" />

	<CheckBox
	    android:id="@+id/rememberTgl"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/passwordTxtIn"
	    android:layout_below="@+id/passwordTxtIn"
	    android:layout_toLeftOf="@+id/advCheck"
	    android:text="@string/remember" />

	<Spinner
	    android:id="@+id/serverSpinner"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/registerBtn"
	    android:layout_below="@+id/rememberTgl"
	    android:visibility="invisible" />

	<Button
	    android:id="@+id/registerBtn"
	    android:layout_width="92dp"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/rememberTgl"
	    android:layout_below="@+id/serverSpinner"
	    android:layout_marginTop="21dp"
	    android:text="@string/register" />

	<ProgressBar
	    android:id="@+id/progressSpinBar"
	    style="?android:attr/progressBarStyleLarge"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/loginButton"
	    android:layout_centerHorizontal="true" />

	<CheckBox
	    android:id="@+id/advCheck"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/rememberTgl"
	    android:layout_alignBottom="@+id/rememberTgl"
	    android:layout_alignRight="@+id/passwordTxtIn"
	    android:text="Advanced" />

</RelativeLayout>